<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Imagen"
            android:layout_width="213dp"
            android:layout_height="98dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Id"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/textview1" />

            <TextView
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/textview2" />

            <TextView
                android:id="@+id/Ruta"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/textview3" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>